# chess-ts

./: .env  .gitignore  .todo  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json  turbo.json
.cargo/: config.toml
ValidMovesLogic/deleteValidMove/: deleteInvalid.tsx
apps/backend/: .gitignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/expo/: babel.config.js  metro.config.js  tsconfig.json
apps/web/: eslint.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: env.ts  (+3 more)
apps/web3/: README.md  package-lock.json  package.json
chess-next/: package-lock.json  package.json  tailwind.config.ts
chess-next/prisma/: schema.prisma
chess-next/src/: middleware.ts
prisma/: schema.prisma
public/: puzzles.json
socket_server/: .eslintrc  .prettierrc  package-lock.json  package.json  tsconfig.json
socket_server/prisma/: schema.prisma
socket_server/puzzle_db/: parse_csv.ts
socket_server/src/: Utils.ts  index.ts  matchMaking.ts  types.ts
socket_server/test/: gemeRoom.test.ts
src/: App.tsx  Layout.tsx  URLs.ts  env.js  index.css  index.tsx  main.jsx  middleware.ts
src/1making common component/: board.tsx  boardMain.tsx
src/app/: layout.tsx  page.tsx  provider.tsx
src/components/: Application.tsx  ChessBoard.tsx  Footer.tsx  Header.tsx  board.css  board.tsx  findValidMoves.tsx  pieceLogic.tsx  toRow_col.ts  types.tsx
src/modules/: Utils.ts  cockiies.ts  convertMsToTime.ts  types.tsx
(+234 files in other folders)
