[package]
name = "chess_solana"
version = "0.1.0"
edition = "2021"

[lib]
name = "chess_solana"
crate-type = ["cdylib"]
path = "packages/solana/src/lib.rs"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
chess = "3.2.0"
solana-program = "2.3.0"
solana-system-interface = "2.0.0"
thiserror = "2.0.14"

# [workspace.dependencies]
# base64ct = "=1.7.3"
